# MOSANIC

./: .gitignore  DEV_README.md  LICENSE  README.md  pyproject.toml  setup.py  tutorial.ipynb
mosaic/: __init__.py  api.py  cli.py
mosaic/analysis/: __init__.py  knockout.py  relay.py
mosaic/configs/: default.yaml  merfish.yaml  visium.yaml
mosaic/configs/examples/: breast_cancer_visium.yaml
mosaic/configs/organisms/: human.yaml  mouse.yaml
mosaic/data/: __init__.py  anndata_loader.py  channel_classifier.py  lr_database.py  metabolite.py  preprocessor.py  spatial_cv.py  spatial_graph.py  technology.py
mosaic/data/embeddings/metabolites/: 2OG.npy  Acetyl-CoA.npy  Cholesterol.npy  Choline.npy  Chondroitin.npy  Citrate.npy  Citrulline.npy  Deoxyadenosine.npy  Dolichyl phosphate.npy  Fatty Acid.npy  G3P.npy  G6P.npy  GMP.npy  Glucose.npy  Glutamate.npy  Glutathione.npy  Glycine.npy  Histidine.npy  Lactate.npy  Leucine.npy  Malate.npy  Methionine.npy  Ornithine.npy  Oxaloacetate.npy  PRPP.npy  Propanoyl-CoA.npy  Putrescine.npy  Pyrimidine.npy  Pyruvate.npy  Serine.npy  Succinyl-CoA.npy  Threonine.npy  Tyrosine.npy  UDP-N-acetylglucosamine.npy  UDP-glucuronic acid.npy  UMP.npy  (+4 more)
mosaic/databases/: LR_database_mouse.csv  M_R_mouse.txt  scfea_module_smiles.csv
mosaic/evaluation/: ccc_extractor.py  evaluator.py  metrics.py
mosaic/graph/: __init__.py  assembler.py  edge_builder.py  node_features.py  typed_edge_builder.py
mosaic/models/: __init__.py  decoder.py  encoder.py  mosaic_model.py
mosaic/training/: __init__.py  callbacks.py  losses.py  trainer.py
mosanic/: __init__.py  api.py  cli.py
mosanic/analysis/: knockout.py  relay.py
mosanic/configs/: default.yaml  slideseq.yaml  xenium.yaml
mosanic/configs/examples/: breast_cancer_visium.yaml
mosanic/data/: lr_database.py  preprocessor.py  spatial_cv.py  spatial_graph.py  technology.py
mosanic/databases/: M_R.txt  metabolite_list.csv  neuronchat_mouse_db.csv
mosanic/evaluation/: __init__.py  ccc_extractor.py  evaluator.py  metrics.py
mosanic/graph/: assembler.py  edge_builder.py  intracellular_edge_builder.py  node_features.py
mosanic/models/: __init__.py  decoder.py  encoder.py  mosanic_model.py
mosanic/training/: __init__.py  callbacks.py  losses.py  trainer.py
tests/: test_end_to_end.py  test_full_pipeline.py
(+2076 files in other folders)
